--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 50%;
+  width: 40%;
   padding: 0.2em;
 }
 
@@ -14,6 +14,7 @@
   width: 100%;
   height: 100%;
   margin-bottom: 0.2em;
+  margin-left: 0.3em;
   cursor: pointer;
   transition: transform 250ms ease-in;
 }
