--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -45,5 +45,8 @@
   font-size: 0.6rem;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (max-width: 750px) {
+  .container.grid {
+    width: 100%;
+  }
 }
